fix flickering bug

--- a/src/app/fcomponents/products/product/product.component.css
+++ b/src/app/fcomponents/products/product/product.component.css
@@ -10,20 +10,19 @@
     top:0px;
     background-color: #000;
     opacity: 0.3;
-    height: 150px;
-    width: 150px;
+    height: 250px;
+    width: 250px;
 }
 #showDetails{
-    width:600px;
-    height: 600px;
+    width:500px;
+    height: 500px;
     position: absolute;
     top:0;
     display: none;
     overflow: hidden;
-    border: #ededed 1px solid;
-    background-color: #FFFFFF;
     z-index: 99;
 }
 #showDetails img{
     position: absolute;
+    zoom:1.5;
 }
